# MSI_ComputationalGeometry

./: CMakeLists.txt  README.md
scripts/: setupBuild.bash
src/Aufgabe1/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui  points.h
src/Aufgabe2/: AvlTree.h  CMakeLists.txt  coordLineLink.h  glwidget.cpp  glwidget.h  lines.cpp  lines.h  mainwindow.cpp  mainwindow.ui  minHeap.h  minHeap.tpp  points.cpp  utils.cpp
src/Aufgabe2/backup/: AvlTree.h  AvlTree.tpp
src/Aufgabe3/: CMakeLists.txt  RangeTree.cpp  RangeTree.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui  points.cpp  points.h  treewidget.cpp  treewidget.h  utils.h
src/Aufgabe3/additional/: ui_mainwindow.h
src/Aufgabe4/: AffineGeometry.cpp  AffineGeometry.h  CMakeLists.txt  circle.cpp  circle.h  edges.cpp  edges.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui  points.cpp  points.h  triangles.cpp  triangles.h
